--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,6 +1,4 @@
-import = [
-  "~/.config/alacritty/themes/catppuccin-mocha.toml"
-]
+import = ["~/.config/alacritty/themes/catppuccin-mocha.toml"]
 
 live_config_reload = true
 
@@ -8,7 +6,10 @@ live_config_reload = true
 TERM = "xterm-256color"
 
 [window]
-opacity = 0.85
+opacity = 0.9
+blur = true
+
+decorations = "buttonless"
 
 [colors]
 draw_bold_text_with_bright_colors = true
@@ -38,7 +39,7 @@ cyan = "#0DB9D7"
 white = "#ACB0D0"
 
 [font]
-size = 12
+size = 10
 
 [font.bold]
 family = "JetBrains Mono Nerd Font"
@@ -78,8 +79,7 @@ save_to_clipboard = false
 [[keyboard.bindings]]
 action = "SpawnNewInstance"
 key = "Return"
-mods = "Super|Shift" 
+mods = "Super|Shift"
 
 [shell]
 program = "/usr/bin/zsh"
-
