--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -6,3 +6,22 @@ glx-copy-from-front = true;
 glx-swap-method = 2;
 xrender-sync = true;
 xrender-sync-fence = true;
+
+# Enable transparency
+opacity-rule = [
+  "90:class_g = 'Alacritty'",
+  "90:class_g = 'Neovim'",
+];
+
+# Enable blur
+blur-method = "dual_kawase";
+blur-strength = 10; # Adjust the blur strength as needed
+blur-background-exclude = [
+  "class_g = 'Alacritty'",
+  "class_g = 'Neovim'",
+];
+
+# Enable fading (optional)
+fading = true;
+fade-in-step = 0.03;
+fade-out-step = 0.03;
