--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,6 +1,3 @@
-import = ["~/.config/alacritty/themes/catppuccin-mocha.toml"]
-
-live_config_reload = true
 
 [env]
 TERM = "xterm-256color"
@@ -81,5 +78,12 @@ action = "SpawnNewInstance"
 key = "Return"
 mods = "Super|Shift"
 
-[shell]
+[general]
+
+live_config_reload = true
+import = ["~/.config/alacritty/themes/catppuccin-mocha.toml"]
+
+[terminal]
+
+[terminal.shell]
 program = "/usr/bin/zsh"
