--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,21 +1,36 @@
-font_family       JetBrains Mono Nerd Font
-bold_font         auto
-italic_font       auto
-bold_italic_font  auto
+#    __ ___ __  __
+#   / //_(_) /_/ /___ __
+#  / ,< / / __/ __/ // /
+# /_/|_/_/\__/\__/\_, /
+#                /___/
+#
+# Configuration
+font_family                 JetBrainsMono Nerd Font
+font_size                   12
+bold_font                   auto
+italic_font                 auto
+bold_italic_font            auto
 
-font_size         10.0
-enable_ligatures  true
+enable_ligatures            true
 
-background_opacity 0.8
-hide_window_decorations yes
+background_opacity          0.8
+hide_window_decorations     yes
+dynamic_background_opacity  yes
+confirm_os_window_close     0
 
-cursor_shape block
-cursor_blink  on
+cursor_shape                block
+cursor_blink                on
+cursor_blink_interval       0.5
+cursor_stop_blinking_after  1
 
-scrollback_lines 10000
-enable_audio_bell no
+scrollback_lines            5000
+wheel_scroll_min_lines      1
+enable_audio_bell           no
 
-padding_width 20
+window_padding_width        5
+
+selection_foreground        none
+selection_background        none
 
 # Shortcuts for font resizing
 map ctrl+shift+up    increase_font_size
