--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -1,3 +1,11 @@
+#  _   _                  _                 _
+# | | | |_   _ _ __  _ __| | __ _ _ __   __| |
+# | |_| | | | | '_ \| '__| |/ _` | '_ \ / _` |
+# |  _  | |_| | |_) | |  | | (_| | | | | (_| |
+# |_| |_|\__, | .__/|_|  |_|\__,_|_| |_|\__,_|
+#        |___/|_|
+#
+# -----------------------------------------------------
 # This is an example Hyprland config file.
 # Refer to the wiki for more information.
 # https://wiki.hypr.land/Configuring/
@@ -10,29 +18,31 @@
 # source = ~/.config/hypr/myColors.conf
 
 
-################
-### MONITORS ###
-################
+# -----------------------------------------------------
+# Monitors
+# -----------------------------------------------------
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor=,preferred,auto,1.2
+monitor=,preferred,auto,1
 
 
-###################
-### MY PROGRAMS ###
-###################
+
+# -----------------------------------------------------
+# My Programs
+# -----------------------------------------------------
 
 # See https://wiki.hypr.land/Configuring/Keywords/
 
 # Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
-$menu = wofi --show drun
+$menu = rofi -show drun
 
 
-#################
-### AUTOSTART ###
-#################
+
+# -----------------------------------------------------
+# Autostart
+# -----------------------------------------------------
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
@@ -40,12 +50,15 @@ $menu = wofi --show drun
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
+
 exec-once = swww-daemon
+exec-once = ~/.config/waybar/scripts/launch.sh
 
 
-#############################
-### ENVIRONMENT VARIABLES ###
-#############################
+
+# -----------------------------------------------------
+# Environment Variables
+# -----------------------------------------------------
 
 # See https://wiki.hypr.land/Configuring/Environment-variables/
 
@@ -53,9 +66,10 @@ env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
 
-###################
-### PERMISSIONS ###
-###################
+
+# -----------------------------------------------------
+# Permissions
+# -----------------------------------------------------
 
 # See https://wiki.hypr.land/Configuring/Permissions/
 # Please note permission changes here require a Hyprland restart and are not applied on-the-fly
@@ -230,8 +244,9 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, Space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $mainMod, F, exec, firefox,
+bind = $mainMod, F, exec, firefox
 bind = $mainMod, R, exec, ~/.config/waybar/scripts/launch.sh
+bind = $mainMod, B, exec, killall waybar
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
