--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -8,17 +8,20 @@ xrender-sync = true;
 xrender-sync-fence = true;
 
 # Enable transparency
+active-opacity = 1;
+inactive-opacity = 1;
+frame-opacity = 1;
 opacity-rule = [
   "90:class_g = 'Alacritty'",
   "90:class_g = 'Neovim'",
 ];
 
 # Enable blur
+blur-background = true;
 blur-method = "dual_kawase";
-blur-strength = 10; # Adjust the blur strength as needed
+blur-strength = 6; # Adjust the blur strength as needed
 blur-background-exclude = [
-  "class_g = 'Alacritty'",
-  "class_g = 'Neovim'",
+  "window-type = 'dock'",
 ];
 
 # Enable fading (optional)
