set Super/Win-key as the mod in hyprland & i3

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -53,6 +53,7 @@ $menu = rofi -show drun
 
 exec-once = swww-daemon
 exec-once = ~/.config/waybar/scripts/launch.sh
+exec-once = brightnessctl set 30%
 
 
 
@@ -233,7 +234,7 @@ device {
 ###################
 
 # See https://wiki.hypr.land/Configuring/Keywords/
-$mainMod = ALT # Set SUPER to use "Windows" key as main modifier
+$mainMod = SUPER # Set SUPER to use "Windows" key as main modifier
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, Return, exec, $terminal
