refactor tmux config
- Fixing the terminal title
- Set history-buffer size to 10000
- Open new windows in current working directory
- Enable focus-events
- Enable extended-keys

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,15 +6,16 @@ unbind C-b
 bind-key C-a send-prefix
 
 set -g base-index 1         # start indexing windows at 1 instead of 0
+set -g pane-base-index 1    # start pane indexing at 1 instead of 0
 set -g renumber-windows on  # renumber all windows when any window is closed
 set -g set-clipboard on     # use system clipboard
 # set -g status-position bottom
 
 unbind %
-bind | split-window -h 
+bind | split-window -h -c "#{pane_current_path}"
 
 unbind '"'
-bind - split-window -v
+bind - split-window -v -c "#{pane_current_path}"
 
 unbind r
 bind r source-file ~/.tmux.conf
@@ -27,6 +28,13 @@ bind -r h resize-pane -L 5
 bind -r m resize-pane -Z
 
 set -g mouse on
+set -g history-limit 10000
+
+set -g set-titles on
+set -g set-titles-string "#{pane_title}"
+
+set -s focus-events on
+set -s extended-keys on
 
 set-window-option -g mode-keys vi
 
@@ -36,7 +44,7 @@ bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
 
 # remove delay for exiting insert mode with ESC in Neovim
-set -sg escape-time 10
+set -sg escape-time 0
 
 # tpm plugin
 set -g @plugin 'tmux-plugins/tpm'
