refactor(.tmux.conf): add descriptive comments

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,7 @@
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
+# Rebind Prefix to CTRL-A
 set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
@@ -25,14 +26,21 @@ bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
 bind -r h resize-pane -L 5
 
-bind -r m resize-pane -Z
+bind -r m resize-pane -Z 10
 
+# Enable mouse support
 set -g mouse on
-set -g history-limit 10000
 
+# Increase history limit, as we want an "almost" unlimited buffer.
+# May be set to something even higher, like 250k
+set -g history-limit 100000
+
+# Fix Terminal Title display, to not contain tmux specic information
 set -g set-titles on
 set -g set-titles-string "#{pane_title}"
 
+# Enable extended support for some more sophisticated terminal emulator features.
+# Disable them if they are causing problems!
 set -s focus-events on
 set -s extended-keys on
 
