--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,7 +26,7 @@ bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
 bind -r h resize-pane -L 5
 
-bind -r m resize-pane -Z 10
+bind -r m resize-pane -Z
 
 # Enable mouse support
 set -g mouse on
@@ -49,10 +49,16 @@ set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
 bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 
+bind-key n command-prompt "new-session -s '%%'"
+
 unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
 
 # remove delay for exiting insert mode with ESC in Neovim
 set -sg escape-time 0
+
+
+# tmux plugin manager
+set-environment -g TMUX_PLUGIN_MANAGER_PATH ~/.tmux/plugins
 
 # tpm plugin
 set -g @plugin 'tmux-plugins/tpm'
@@ -60,13 +66,17 @@ set -g @plugin 'tmux-plugins/tpm'
 # list of tmux plugins
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'jimeh/tmux-themepack'
+set -g @plugin 'omerxx/tmux-sessionx' # default keybind "<prefix> O" to activate
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
 
 set -g @themepack 'powerline/default/cyan'
 
+set -g @sessionx-bind 'o'
+
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
+
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
