refactor `.tmux.conf` with descriptive comments

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,5 +1,7 @@
+# Enable True color support
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
+set -gq allow-passthrough on
 
 # Rebind Prefix to CTRL-A
 set -g prefix C-a
@@ -21,11 +23,16 @@ bind - split-window -v -c "#{pane_current_path}"
 unbind r
 bind r source-file ~/.tmux.conf
 
+unbind v
+bind v copy-mode
+
+# resizing panes with hjkl
 bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
 bind -r h resize-pane -L 5
 
+# maximize panes
 bind -r m resize-pane -Z
 
 # Enable mouse support
@@ -39,19 +46,27 @@ set -g history-limit 100000
 set -g set-titles on
 set -g set-titles-string "#{pane_title}"
 
+
 # Enable extended support for some more sophisticated terminal emulator features.
 # Disable them if they are causing problems!
-set -s focus-events on
-set -s extended-keys on
+# set -s focus-events on
+# set -s extended-keys on
 
+
+# vim shell navigations and selects in tmux panes
 set-window-option -g mode-keys vi
 
 bind-key -T copy-mode-vi 'v' send -X begin-selection # start selecting text with "v"
 bind-key -T copy-mode-vi 'y' send -X copy-selection # copy text with "y"
 
+
+# Instant switch to a new tmux session directory that exist
+bind-key -r f run-shell "tmux neww ~/scripts/tmux-sessionizer"
 bind-key n command-prompt "new-session -s '%%'"
 
+# Drag copy using mouse
 unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging with mouse
+
 
 # remove delay for exiting insert mode with ESC in Neovim
 set -sg escape-time 0
@@ -73,7 +88,6 @@ set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for 
 set -g @themepack 'powerline/default/cyan'
 
 set -g @sessionx-bind 'o'
-
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 
