Modify `.tmux.conf` to have new windows open in current pane's directory

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -14,11 +14,15 @@ set -g renumber-windows on  # renumber all windows when any window is closed
 set -g set-clipboard on     # use system clipboard
 # set -g status-position bottom
 
+# Splits in the current pane’s directory
 unbind %
 bind | split-window -h -c "#{pane_current_path}"
 
 unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
+
+# New windows in current pane’s directory
+bind c new-window -c "#{pane_current_path}"
 
 unbind r
 bind r source-file ~/.tmux.conf
