--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,6 +6,9 @@
 #
 # Configuration
 font_family                 JetBrainsMono Nerd Font
+symbol_map U+1F300-U+1FAFF Noto Color Emoji
+symbol_map U+1F000-U+1F6FF Noto Color Emoji
+symbol_map U+1FA70-U+1FAFF Noto Color Emoji
 font_size                   12
 bold_font                   auto
 italic_font                 auto
