--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -291,6 +291,23 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+# Tiled window resizing
+bind = $mainMod, H, resizeactive, -20 0
+bind = $mainMod, L, resizeactive, 20 0
+bind = $mainMod, K, resizeactive, 0 -20
+bind = $mainMod, J, resizeactive, 0 20
+
+
+# Floating window interactive resize mode
+bind = $mainMod, R, submap, resize
+submap = resize
+binde = , left,  resizeactive, -20 0
+binde = , right, resizeactive, 20 0
+binde = , up,    resizeactive, 0 -20
+binde = , down,  resizeactive, 0 20
+bind = , escape, submap, reset
+submap = reset
+
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
